<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10sp" >

    <EditText
        android:id="@+id/login_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:singleLine="true"
        android:imeOptions="flagNoExtractUi">
    </EditText>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:ems="10"
        android:inputType="textPassword"
        android:imeOptions="flagNoExtractUi">
    </EditText>

    <CheckBox android:id="@+id/checkbox_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:text="@string/site_link"
        android:textColorLink="#36f"
        android:textColorHighlight="#0000"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:autoLink="all" />
</LinearLayout>