<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:src="@drawable/app_logo" />

    <EditText
        android:id="@+id/userText"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:hint="@string/username_hint"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_background"
        android:textSize="14sp"
        android:textColor="#333"
        android:textCursorDrawable="@null"
        android:inputType="textPersonName"
        android:imeOptions="flagNoExtractUi">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passText"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:hint="@string/password_hint"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/login_edittext_background"
        android:textSize="14sp"
        android:textColor="#333"
        android:textCursorDrawable="@null"
        android:inputType="textPassword"
        android:imeOptions="flagNoExtractUi" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="260dp"
        android:layout_height="36dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="14sp"
        android:textColor="#333"
        android:text="@string/login_text"
        android:onClick="onLoginClick"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="12dp"
        android:text="@string/site_link"
        android:textColorLink="#36f"
        android:textColorHighlight="#0000"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:autoLink="all" />
</LinearLayout>
